chore: update gitignore to ignore firebase files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 allYouNeedForYourRecipes/src/environments/environment.ts
 allYouNeedForYourRecipes/src/environments/environment.prod.ts
+allYouNeedForYourRecipes/.firebase/hosting.ZGlzdC9hbGxZb3VOZWVkRm9yWW91clJlY2lwZXM.cache
+allYouNeedForYourRecipes/firebase.json
+allYouNeedForYourRecipes/.firebaserc
